header z-index fix

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -71,6 +71,7 @@ code
 
 // Nav ---------------------------------------- 
 header
+  z-index: 1
   background: rgba(white, .9)
   padding: 0 1em 1em
   width: 100%
